--- a/module/admin/menu.css
+++ b/module/admin/menu.css
@@ -19,9 +19,6 @@
 	float: left;
 	padding: 0.5em;
 	font-size: 11pt;
-	z-index: 999;
-	text-transform: uppercase;
-
 	cursor: pointer;
 	-webkit-transition: all 0.2s;
 	-moz-transition: all 0.2s;
@@ -40,12 +37,11 @@
 .admin-menu > ul > li > ul {
 	margin: 0;
 	font-size: 10pt;
-	display: none;
 	position: absolute;	
+	top: 2em;
 	left: 0;
 	width: 100%;
-	padding: 1em 0 1em 0;
-	z-index: 998;
+	padding: 0.75em 0 0.75em 0;
 	background: #333333;
 }
 
@@ -53,14 +49,14 @@
 	text-transform: none;
 	width: 100%;
 	background: #333333;
-	padding: 1em;
+	padding: 0.75em;
 	display: inline;
 }
 
 .admin-menu > ul > li > ul > li a {
 	text-decoration: none;
 	color: #ffffff;
-
+	padding: 0.5em;
 }
 
 .admin-menu > ul > li > ul > li:hover {
