JS & CSS Changes for Active Dropdown Menu

--- a/module/admin/menu.css
+++ b/module/admin/menu.css
@@ -68,7 +68,11 @@
 .admin-menu > ul > li > ul > li:hover {
 	background: #939393;
 
+}
 
+.admin-menu > ul > li > ul > li.active-page {
+	background: #939393;
+	color #000000;
 }
 .admin-menu > ul > li > ul > li:hover a{
 	color: #000000;
