--- a/theme/ringing/css/theme.css
+++ b/theme/ringing/css/theme.css
@@ -1,3 +1,12 @@
+#logo {
+	padding:0!important;
+}
+#hd_sch {
+	left:270px!important;
+}
+#hd_sch #sch_stx {
+	width: 240px!important;
+}
 #aside {
 	float:left;
 }
