--- a/module/multisite/multisite.css
+++ b/module/multisite/multisite.css
@@ -172,3 +172,38 @@ fieldset legend {
 	padding: 0 10px;
 	font-weight: bold;
 }
+
+.message {
+	border: 2px solid #555555;
+	color: blue;
+	font-weight: bold;
+	background-color: #d5d5d5;
+	text-align: center;
+	margin: 10px 0;
+	padding: 10px 20px;
+	border-radius: 3px;
+}
+input[type='submit'] {
+	border: 1px solid #blue;
+	background-color: #f9f9f9;
+	color: blue;
+	border-radius: 4px;
+	height: 30px;
+	padding: 0 15px;
+	cursor: pointer;
+}
+input[type='submit']:hover {
+	border: 1px solid orange;
+	background-color: orange;
+	color: #ffffff;
+}
+
+.item {
+	display: inline-block;
+	background-color: blue;
+	width: 100px;
+	padding: 3px 5px;
+	border-radius: 3px;
+	color: #ffffff;
+	margin-bottom: 4px;
+}
