--- a/theme/default/css/theme.css
+++ b/theme/default/css/theme.css
@@ -1,3 +1,18 @@
+#logo {
+	padding:0!important;
+}
+
+#logo img {
+	width: 240px;
+	height: 120px;
+}
+
+#hd_sch {
+	left:270px!important;
+}
+#hd_sch #sch_stx {
+	width: 240px!important;
+}
 #aside {
 	float:left;
 }
