--- a/theme/sample/css/theme.css
+++ b/theme/sample/css/theme.css
@@ -1,3 +1,18 @@
+#logo {
+	padding:0!important;
+}
+
+#logo img {
+	width: 240px;
+	height: 120px;
+}
+
+#hd_sch {
+	left:270px!important;
+}
+#hd_sch #sch_stx {
+	width: 240px!important;
+}
 #aside {
 	float:left;
 }
@@ -5,9 +20,4 @@
 #container {
 	border-right: 0;
 	border-left: 1px solid #dde4e9;
-}
-
-.header-container {
-	min-height: 250px;
-	background: #373636;
 }
